# S3DMath

./: README.md  meson.build
examples/: meson.build  vector.cpp
examples/include/glad/: gl.h
examples/src/: example.cpp
include/S3DMath/: CPU.h  Camera.h  Cluster.h  Common.h  Entity.h  EntityFunction.h  GeometricNode.h  Material.h  MathematicSystem.h  MathematicsTypes.h  Matrix-inl.h  Mesh.h  Quaternion-inl.h  RenderList.h  Resource.h  RootEntity.h  S3DMath.h  SIMDInstruction.h  Vector-inl.h
include/S3DMath/Mesh/: Cuboid.h  FrameRectangle.h  Rectangle.h
src/: CPU.cpp  Camera.cpp  Cluster.cpp  Color.cpp  Common.cpp  Entity.cpp  EntityFunction.cpp  GeometricNode.cpp  MathematicSystem.cpp  Matrix.cpp  Quaternion.cpp  RenderList.cpp  RootEntity.cpp  Vector.cpp  meson.build
